# plex-poster-download

./: .env.example  .gitignore  README.md  config.template.yml  plex_connection.py  plex_poster_download.py  pyproject.toml  requirements.txt
