[project]
name = "plex-poster-download"
version = "1.0.0"
description = "Pull Movie and TV Show poster images from your Plex libraries."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plexapi>=4.18.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]
